--- a/ClinicManagement/Views/User/Doctors.cshtml
+++ b/ClinicManagement/Views/User/Doctors.cshtml
@@ -10,7 +10,7 @@
         {
             <div class="options-box">
                 <div class="options-items">
-                    @Html.ActionLink("Make an appointment", "Create", "Appointment", null, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Make an appointment", "Availability", "Appointment", null, new { @class = "btn btn-primary" })
                 </div>
             </div>
         }
