--- a/ClinicManagement/wwwroot/css/appointments.css
+++ b/ClinicManagement/wwwroot/css/appointments.css
@@ -52,7 +52,7 @@
 
 .filters-box {
     width: 100%;
-    min-width: 750px;
+    min-width: 1200px;
     height: fit-content;
     background-color: white;
     margin-top: 10rem;
@@ -74,12 +74,42 @@
 
 .doctor-availability {
     width: 100%;
-    min-width: 750px;
+    min-width: 1200px;
     height: fit-content;
     background-color: white;
     margin-top: 2rem;
     padding: 5rem;
+    display: flex;
 }
+
+.left {
+    width: 30%;
+}
+
+.right {
+    width: 70%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+    .right p {
+        background-color: #0d6efd;
+        border: none;
+        color: white;
+        text-decoration: none;
+        text-align: center;
+        cursor: pointer;
+        flex: 1 0 21%;
+        margin: 5px;
+        line-height: 6rem;
+        -webkit-transition-duration: 0.4s; /* Safari */
+        transition-duration: 0.4s;
+    }
+
+        .right p:hover {
+            background-color: #3c89fa; /* #9ac2fc */
+            box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+        }
 
 .ui-widget-header {
     background: #0d6efd;
