--- a/ClinicManagement/wwwroot/css/appointments.css
+++ b/ClinicManagement/wwwroot/css/appointments.css
@@ -93,12 +93,10 @@
 }
 
     .right p {
-        background-color: #0d6efd;
         border: none;
         color: white;
         text-decoration: none;
         text-align: center;
-        cursor: pointer;
         flex: 1 0 21%;
         margin: 5px;
         line-height: 6rem;
@@ -106,10 +104,19 @@
         transition-duration: 0.4s;
     }
 
-        .right p:hover {
-            background-color: #3c89fa; /* #9ac2fc */
-            box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+        .right p.not-available {
+            background-color: #9ac2fc;
         }
+
+        .right p.available {
+            background-color: #0d6efd;
+            cursor: pointer;
+        }
+
+            .right p.available:hover {
+                background-color: #3c89fa;
+                box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+            }
 
 .ui-widget-header {
     background: #0d6efd;
