--- a/ClinicManagement/Views/Appointment/AvailabilityPost.cshtml
+++ b/ClinicManagement/Views/Appointment/AvailabilityPost.cshtml
@@ -1,51 +1,47 @@
-﻿@model ClinicManagement.Models.AvailabilityViewModel
+﻿@model ClinicManagement.Models.AvailabilityPostViewModel
 
 @{
     ViewBag.Title = "Create appointment";
 }
 
 <div class="main-container">
-    <div class="filters-box">
-        @using (Html.BeginForm("Availability", "Appointment", FormMethod.Post))
-        {
+    @using (Html.BeginForm("Create", "Appointment", FormMethod.Post))
+    {
+        <div class="filters-box">
             <div class="form-group">
                 <label for="SpecialtyId">Specialties</label>
                 <select name="SpecialtyId" id="SpecialtyId" class="form-select">
+                    <option value="@Model.SpecialtyId">@Model.Specialty.Name</option>
                 </select>
                 @Html.ValidationMessageFor(model => model.SpecialtyId, "", new { @class = "text-danger" })
             </div>
 
             <div class="form-group">
                 <label for="DoctorId">Doctors</label>
-                <select name="DoctorId" id="DoctorId" class="form-select" @(Model.Doctor == null ? "disabled" : "")>
-                    @if (Model.Doctor != null)
-                    {
-                        <option value="@Model.DoctorId">@Model.Doctor.FullName</option>
-                    }
+                <select name="DoctorId" id="DoctorId" class="form-select">
+                    <option value="@Model.DoctorId">@Model.Doctor.FullName</option>
                 </select>
                 @Html.ValidationMessageFor(model => model.DoctorId, "", new { @class = "text-danger" })
             </div>
 
-
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">Check availability</button>
             </div>
-        }
-    </div>
-    @if (Model.Doctor != null)
-    {
+        </div>
         <div class="doctor-availability">
             <div class="left">
-                <p>
-                    <b>Doctor:</b> @Model.Doctor.FullName
-                </p>
-                <p>
-                    <b>Specialty:</b> @Model.Specialty.Name
-                </p>
-                <p>
-                    <b>Date:</b> <span id="calendar-value">Pick date</span>
+                <div>
+                    <p>
+                        <b>Date:</b> @Html.TextBoxFor(model => model.Date, "", new { id = "calendar-value" })
+                        @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+                    </p>
+                    <p>
+                        <b>Hour:</b> @Html.TextBoxFor(model => model.Hour, "", new { id = "hour-value" })
+                        @Html.ValidationMessageFor(model => model.Hour, "", new { @class = "text-danger" })
+                    </p>
                     <div id="calendar"></div>
-                </p>
+                </div>
+                <p><input type="submit" /></p>
             </div>
             <div class="right" id="hours">
             </div>
