Add few security and style improvements to appointment creating

--- a/ClinicManagement/Views/Appointment/Create.cshtml
+++ b/ClinicManagement/Views/Appointment/Create.cshtml
@@ -4,7 +4,8 @@
 
 <div class="main-container">
     <div class="complete-box">
-       Your appointment has been created! Check your appointments in "Appointments" menu option or your profile overview in upper right corner!
+        <h2 class="text-center">Your appointment has been created!</h2>
+        <h4 class="text-center">Check your appointments in "Appointments" menu option or your profile overview in upper right corner!</h4>
     </div>
 </div>
 
