--- a/ClinicManagement/Views/Appointment/AvailabilityPost.cshtml
+++ b/ClinicManagement/Views/Appointment/AvailabilityPost.cshtml
@@ -7,10 +7,12 @@
 <div class="main-container">
     @using (Html.BeginForm("Create", "Appointment", FormMethod.Post))
     {
-        <div class="filters-box">
+        @Html.HiddenFor(model => model.DoctorId)
+        @Html.HiddenFor(model => model.SpecialtyId)
+        <div class="selected-filters-box">
             <div class="form-group">
                 <label for="SpecialtyId">Specialties</label>
-                <select name="SpecialtyId" id="SpecialtyId" class="form-select">
+                <select name="SpecialtyId" id="SpecialtyId" class="form-select" disabled>
                     <option value="@Model.SpecialtyId">@Model.Specialty.Name</option>
                 </select>
                 @Html.ValidationMessageFor(model => model.SpecialtyId, "", new { @class = "text-danger" })
@@ -18,7 +20,7 @@
 
             <div class="form-group">
                 <label for="DoctorId">Doctors</label>
-                <select name="DoctorId" id="DoctorId" class="form-select">
+                <select name="DoctorId" id="DoctorId" class="form-select" disabled>
                     <option value="@Model.DoctorId">@Model.Doctor.FullName</option>
                 </select>
                 @Html.ValidationMessageFor(model => model.DoctorId, "", new { @class = "text-danger" })
@@ -31,17 +33,19 @@
         <div class="doctor-availability">
             <div class="left">
                 <div>
-                    <p>
-                        <b>Date:</b> @Html.TextBoxFor(model => model.Date, "", new { id = "calendar-value" })
-                        @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
-                    </p>
-                    <p>
-                        <b>Hour:</b> @Html.TextBoxFor(model => model.Hour, "", new { id = "hour-value" })
-                        @Html.ValidationMessageFor(model => model.Hour, "", new { @class = "text-danger" })
-                    </p>
                     <div id="calendar"></div>
+                    <div class="form-group pt-3">
+                        <b>Date:</b> @Html.TextBoxFor(model => model.Date, "", new { id = "calendar-value", @readonly = "readonly", placeholder = "Pick date" })
+                        @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+                    </div>
+                    <div class="form-group pt-1">
+                        <b>Hour:</b> @Html.TextBoxFor(model => model.Hour, "", new { id = "hour-value", @readonly = "readonly", placeholder = "Pick hour" })
+                        @Html.ValidationMessageFor(model => model.Hour, "", new { @class = "text-danger" })
+                    </div>
                 </div>
-                <p><input type="submit" /></p>
+                <div class="form-group pt-1">
+                    <button type="submit" class="btn btn-primary">Make an appointment</button>
+                </div>
             </div>
             <div class="right" id="hours">
             </div>
