--- a/ClinicManagement/Views/User/Manage.cshtml
+++ b/ClinicManagement/Views/User/Manage.cshtml
@@ -42,18 +42,21 @@
                         @Html.DisplayFor(modelItem => item.PhoneNumber)
                     </td>
                     <td>
-                        <div class="dropdown btn-block">
-                            <button class="btn btn-xs btn-primary btn-block dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                                Manage
-                                <span class="caret"></span>
-                            </button>
-                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                @Html.ActionLink("Edit", "Edit", new { userId = item.UserId }, new { @class = "dropdown-item" })
-                                <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#@item.UserName" style="cursor: pointer;">
-                                    Remove
-                                </a>
+                        @if (!item.Role.Contains("Administrator"))
+                        {
+                            <div class="dropdown btn-block">
+                                <button class="btn btn-xs btn-primary btn-block dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                    Manage
+                                    <span class="caret"></span>
+                                </button>
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                    @Html.ActionLink("Edit", "Edit", new { userId = item.UserId }, new { @class = "dropdown-item" })
+                                    <a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#@item.UserName" style="cursor: pointer;">
+                                        Remove
+                                    </a>
+                                </div>
                             </div>
-                        </div>
+                        }
                     </td>
                 </tr>
 
