Change appointments availability mechanism

--- a/ClinicManagement/Views/Appointment/AvailabilityGet.cshtml
+++ b/ClinicManagement/Views/Appointment/AvailabilityGet.cshtml
@@ -1,4 +1,4 @@
-﻿@model ClinicManagement.Models.AvailabilityGetViewModel
+﻿@model ClinicManagement.Models.AvailabilityViewModel
 
 @{
     ViewBag.Title = "Create appointment";
