--- a/ClinicManagement/Views/Appointment/AvailabilityPost.cshtml
+++ b/ClinicManagement/Views/Appointment/AvailabilityPost.cshtml
@@ -1,4 +1,4 @@
-﻿@model ClinicManagement.Models.AvailabilityPostViewModel
+﻿@model ClinicManagement.Models.AvailabilityViewModel
 
 @{
     ViewBag.Title = "Create appointment";
@@ -12,7 +12,7 @@
         <div class="selected-filters-box">
             <div class="form-group">
                 <label for="SpecialtyId">Specialties</label>
-                <select name="SpecialtyId" id="SpecialtyId" class="form-select" disabled>
+                <select name="SpecialtyId" id="SpecialtyId" class="form-select">
                     <option value="@Model.SpecialtyId">@Model.Specialty.Name</option>
                 </select>
                 @Html.ValidationMessageFor(model => model.SpecialtyId, "", new { @class = "text-danger" })
@@ -20,7 +20,7 @@
 
             <div class="form-group">
                 <label for="DoctorId">Doctors</label>
-                <select name="DoctorId" id="DoctorId" class="form-select" disabled>
+                <select name="DoctorId" id="DoctorId" class="form-select">
                     <option value="@Model.DoctorId">@Model.Doctor.FullName</option>
                 </select>
                 @Html.ValidationMessageFor(model => model.DoctorId, "", new { @class = "text-danger" })
@@ -31,26 +31,19 @@
             </div>
         </div>
         <div class="doctor-availability">
-            <div class="left">
-                <div>
-                    <div class="form-group pt-3">
-                        <b>Date:</b> @Html.TextBoxFor(model => model.Date, "", new { id = "calendar-value", @readonly = "readonly", placeholder = "Pick date (dd/mm/yyyy)" })
-                        @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })<i class="bi bi-calendar" id="calendar"></i>
-                    </div>
-                    <div class="form-group pt-1">
-                        <b>Hour:</b> @Html.TextBoxFor(model => model.Hour, "", new { id = "hour-value", @readonly = "readonly", placeholder = "Pick hour" })
-                        @Html.ValidationMessageFor(model => model.Hour, "", new { @class = "text-danger" })
-                    </div>
+            <form>
+                <div class="mb-3">
+                    <label for="date" class="form-label">Pick date</label>
+                    <input type="date" class="form-control" id="date">
                 </div>
-
-                @Html.ValidationSummary()
-
-                <div class="form-group pt-1">
-                    <button type="submit" class="btn btn-primary">Make an appointment</button>
+                <div class="mb-3">
+                    <label for="hour" class="form-label">Pick hour</label>
+                    <select name="hour" id="hour" class="form-select" disabled>
+                    </select>
                 </div>
-            </div>
-            <div class="right" id="hours">
-            </div>
+            </form>
+
+            @Html.ValidationSummary()
         </div>
     }
 </div>
@@ -62,7 +55,5 @@
 
 @section Scripts{
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js" integrity="sha256-0YPKAwZP7Mp3ALMRVB2i8GXeEndvCq3eSl/WsAl1Ryk=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/1.0.10/datepicker.js"></script>
-    <script src="~/js/datepicker.js"></script>
     <script src="~/js/appointments.js"></script>
 }
