--- a/ClinicManagement/Views/Appointment/Create.cshtml
+++ b/ClinicManagement/Views/Appointment/Create.cshtml
@@ -1,14 +1,62 @@
-﻿@{
-    ViewBag.Title = "Appointment created";
+﻿@model ClinicManagement.Models.AppointmentCreateViewModel
+
+@{
+    ViewBag.Title = "Create appointment";
 }
 
 <div class="main-container">
-    <div class="complete-box">
-        <h2 class="text-center">Your appointment has been created!</h2>
-        <h4 class="text-center">Check your appointments in "Appointments" menu option or your profile overview in upper right corner!</h4>
-    </div>
+    @using (Html.BeginForm("Create", "Appointment", FormMethod.Post))
+    {
+        <div class="availability-box">
+            <div class="form-group">
+                @Html.LabelFor(m => m.SpecialtyId, "Specialty")
+                @Html.DropDownListFor(m => m.SpecialtyId, Model.Specialties, new { @class = "form-select" })
+                @Html.ValidationMessageFor(model => model.SpecialtyId, "", new { @class = "text-danger" })
+            </div>
+
+            <div class="form-group">
+                <label for="DoctorId">Doctors</label>
+                <select name="DoctorId" id="DoctorId" class="form-select" disabled>
+                </select>
+                @Html.ValidationMessageFor(model => model.DoctorId, "", new { @class = "text-danger" })
+            </div>
+            <div>
+                <div class="mb-3">
+                    @Html.LabelFor(model => model.Date, "Pick date")
+                    @Html.TextBoxFor(model => model.Date, new
+                    {
+                        @class = "form-control",
+                        type = "date",
+                        disabled = "true"
+                    })
+                </div>
+
+                <div class="mb-3">
+                    <label for="HourId">Pick hour</label>
+                    <select name="HourId" id="HourId" class="form-select" disabled>
+                    </select>
+                    @Html.ValidationMessageFor(model => model.HourId, "", new { @class = "text-danger" })
+                </div>
+
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Create appointment</button>
+                </div>
+            </div>
+        </div>
+        <div class="errors">
+            @Html.ValidationSummary()
+        </div>
+        
+
+    }
 </div>
 
 @section Styles {
-    <link href="~/css/create.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/1.0.10/datepicker.css" rel='stylesheet' />
+    <link href="~/css/appointments.css" rel="stylesheet" type="text/css" />
+}
+
+@section Scripts{
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js" integrity="sha256-0YPKAwZP7Mp3ALMRVB2i8GXeEndvCq3eSl/WsAl1Ryk=" crossorigin="anonymous"></script>
+    <script src="~/js/appointments.js"></script>
 }
