Add proper validation messages and some styling

--- a/ClinicManagement/Views/Appointment/Create.cshtml
+++ b/ClinicManagement/Views/Appointment/Create.cshtml
@@ -8,6 +8,7 @@
     @using (Html.BeginForm("Create", "Appointment", FormMethod.Post))
     {
         <div class="availability-box">
+
             <div class="form-group">
                 @Html.LabelFor(m => m.SpecialtyId, "Specialty")
                 @Html.DropDownListFor(m => m.SpecialtyId, Model.Specialties, new { @class = "form-select" })
@@ -20,6 +21,7 @@
                 </select>
                 @Html.ValidationMessageFor(model => model.DoctorId, "", new { @class = "text-danger" })
             </div>
+
             <div>
                 <div class="mb-3">
                     @Html.LabelFor(model => model.Date, "Pick date")
@@ -29,6 +31,7 @@
                         type = "date",
                         disabled = "true"
                     })
+                    @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="mb-3">
@@ -41,13 +44,13 @@
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">Create appointment</button>
                 </div>
+
             </div>
         </div>
-        <div class="errors">
+
+        <div class="@(Html.ViewData.ModelState.ErrorCount > 0 ? "errors" : "")">
             @Html.ValidationSummary()
         </div>
-        
-
     }
 </div>
 
