--- a/ClinicManagement/Views/User/Doctors.cshtml
+++ b/ClinicManagement/Views/User/Doctors.cshtml
@@ -17,6 +17,7 @@
         <table class="stripe" id="dataTable">
             <thead>
                 <tr>
+                    <th></th>
                     <th>
                         @Html.DisplayNameFor(model => model.FirstName)
                     </th>
@@ -35,6 +36,9 @@
                 @foreach (var item in Model)
                 {
                     <tr>
+                        <td>
+                            <img src="@Url.Content("~/img/profiles/" + item.UserName + ".jpg")" />
+                        </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.FirstName)
                         </td>
