Add migration with Medicine table and seed data

--- a/ClinicManagement/Views/Prescription/Index.cshtml
+++ b/ClinicManagement/Views/Prescription/Index.cshtml
@@ -5,13 +5,17 @@
 }
 
 <div class="main-container">
-    <p>Lorem ipsum</p>
+    <div class="prescription-box">
+
+        Prescriptions
+
+    </div>
 </div>
 
 @section Styles {
-    
+    <link href="~/css/prescription.css" rel="stylesheet" type="text/css" />
 }
 
 @section Scripts{
-    
+
 }
