--- a/ClinicManagement/Views/Prescription/Index.cshtml
+++ b/ClinicManagement/Views/Prescription/Index.cshtml
@@ -17,41 +17,65 @@
         <table class="stripe" id="dataTable">
             <thead>
                 <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().Description)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().ExpirationDate)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().IsCollected)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().CollectedDate)
-                    </th>
-                    @if (User.IsInRole("Patient"))
+                    @if (User.IsInRole("Patient") || User.IsInRole("Doctor"))
                     {
+                        <th>
+                            @Html.DisplayNameFor(model => model.FirstOrDefault().Description)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FirstOrDefault().ExpirationDate)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FirstOrDefault().IsCollected)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FirstOrDefault().CollectedDate)
+                        </th>
+                        @if (User.IsInRole("Patient"))
+                        {
+                <th>
+                    @Html.DisplayNameFor(model => model.FirstOrDefault().DoctorName)
+                </th>
+                        }
+                        else if (User.IsInRole("Doctor"))
+                        {
+                            <th>
+                                @Html.DisplayNameFor(model => model.FirstOrDefault().PatientName)
+                            </th>
+                        }
+                        <th>
+                            @Html.DisplayNameFor(model => model.FirstOrDefault().CreateDate)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FirstOrDefault().MedicineName)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FirstOrDefault().MedicinePrice)
+                        </th>
+                    }
+                    else if (User.IsInRole("Pharmacist"))
+                    {
+                        <th>
+                            @Html.DisplayNameFor(model => model.FirstOrDefault().Description)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FirstOrDefault().ExpirationDate)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FirstOrDefault().CreateDate)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FirstOrDefault().IsCollected)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.FirstOrDefault().CollectedDate)
+                        </th>
                         <th>
                             @Html.DisplayNameFor(model => model.FirstOrDefault().DoctorName)
                         </th>
-                    }
-                    else if (User.IsInRole("Doctor"))
-                    {
                         <th>
                             @Html.DisplayNameFor(model => model.FirstOrDefault().PatientName)
                         </th>
-                    }
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().CreateDate)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().MedicineName)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().MedicinePrice)
-                    </th>
-                    @if (User.IsInRole("Pharmacist"))
-                    {
                         <th>
                             Realize
                         </th>
@@ -62,54 +86,80 @@
                 @foreach (var item in Model)
                 {
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Description)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.ExpirationDate)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.IsCollected)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.CollectedDate)
-                    </td>
-                    @if (User.IsInRole("Patient"))
+                    @if (User.IsInRole("Patient") || User.IsInRole("Doctor"))
                     {
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Description)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ExpirationDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.IsCollected)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CollectedDate)
+                        </td>
+                        @if (User.IsInRole("Patient"))
+                        {
+                            <td>
+                                @Html.DisplayFor(modelItem => item.DoctorName)
+                            </td>
+                        }
+                        else if (User.IsInRole("Doctor"))
+                        {
+                            <td>
+                                @Html.DisplayFor(modelItem => item.PatientName)
+                            </td>
+                        }
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CreateDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.MedicineName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.MedicinePrice)
+                        </td>
+                    }
+                    else if (User.IsInRole("Pharmacist"))
+                    {
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Description)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ExpirationDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CreateDate)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.IsCollected)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CollectedDate)
+                        </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.DoctorName)
                         </td>
-                    }
-                    else
-                    {
                         <td>
                             @Html.DisplayFor(modelItem => item.PatientName)
                         </td>
-                    }
-                    <td>
-                        @Html.DisplayFor(modelItem => item.CreateDate)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.MedicineName)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.MedicinePrice)
-                    </td>
-                    @if (User.IsInRole("Pharmacist") && !item.IsCollected)
-                    {
-                        <td>
-                            @Html.ActionLink("Realize", "Realize", "Prescription", new { prescriptionId = item.PrescriptionId })
-                        </td>
-                    }
-                    else
-                    {
-                        <td></td>
+                        if (!item.IsCollected)
+                        {
+                            <td>
+                                @Html.ActionLink("Realize", "Realize", "Prescription", new { prescriptionId = item.PrescriptionId }, new { @class = "btn btn-primary" })
+                            </td>
+                        }
+                        else
+                        {
+                            <td></td>
+                        }
                     }
                 </tr>
                 }
             </tbody>
         </table>
-
     </div>
 </div>
 
