--- a/ClinicManagement/wwwroot/css/prescription.css
+++ b/ClinicManagement/wwwroot/css/prescription.css
@@ -8,6 +8,13 @@
     flex-direction: column;
 }
 
+.options-box {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: flex-end;
+}
+
 .prescription-box {
     width: 100%;
     min-width: 750px;
@@ -26,3 +33,19 @@
         background-color: #0d6efd;
         color: white;
     }
+
+
+.write-prescription-box {
+    width: 100%;
+    min-width: 750px;
+    height: fit-content;
+    background-color: white;
+    margin-top: 10rem;
+    padding: 5rem;
+}
+
+.form-group {
+    width: 50%;
+    text-align: center;
+    margin: auto;
+}
