--- a/ClinicManagement/Views/Shared/_Layout.cshtml
+++ b/ClinicManagement/Views/Shared/_Layout.cshtml
@@ -31,29 +31,19 @@
                             <span>Main site</span>
                         </a>
 
-                        @if (User.IsInRole("Patient") || User.IsInRole("Administrator"))
+                        @if (User.IsInRole("Patient"))
                         {
                             <a href="/User/Doctors" class="list-group-item list-group-item-action">
                                 <span><img src="~/img/icons/doctor.png" class="decoration-icon" />Doctors</span>
                             </a>
-                            <a href="/Appointment/Index" class="list-group-item list-group-item-action">
-                                <span><img src="~/img/icons/appointment.png" class="decoration-icon" />Appointments</span>
-                            </a>
                         }
 
-                        @if (User.IsInRole("Doctor") || User.IsInRole("Administrator"))
+                        @if (User.IsInRole("Doctor"))
                         {
                             <a href="/User/Patients" class="list-group-item list-group-item-action">
                                 <span><img src="~/img/icons/patient.png" class="decoration-icon" />Patients</span>
                             </a>
-                            <a href="/Appointment/Index" class="list-group-item list-group-item-action">
-                                <span><img src="~/img/icons/appointment.png" class="decoration-icon" />Appointments</span>
-                            </a>
                         }
-
-                        <a href="/Prescription/Index" class="list-group-item list-group-item-action">
-                            <span><img src="~/img/icons/prescription.png" class="decoration-icon" />Prescriptions</span>
-                        </a>
 
                         @if (User.IsInRole("Administrator"))
                         {
@@ -61,7 +51,16 @@
                                 <span>Admin panel</span>
                             </a>
                         }
+                        else
+                        {
+                            <a href="/Appointment/Index" class="list-group-item list-group-item-action">
+                                <span><img src="~/img/icons/appointment.png" class="decoration-icon" />Appointments</span>
+                            </a>
 
+                            <a href="/Prescription/Index" class="list-group-item list-group-item-action">
+                                <span><img src="~/img/icons/prescription.png" class="decoration-icon" />Prescriptions</span>
+                            </a>
+                        }
                     </div>
                 </div>
             </nav>
