--- a/ClinicManagement/wwwroot/css/site.css
+++ b/ClinicManagement/wwwroot/css/site.css
@@ -109,7 +109,7 @@ main {
     }
 
 .login-box-container {
-    height: 40rem;
+    height: fit-content;
     width: 80rem;
     border-radius: 1rem;
     display: flex;
@@ -120,6 +120,7 @@ main {
 
 .box-right {
     width: 50%;
+    padding-bottom: 3rem;
     background-image: url("../img/images/login-main.jpg");
     background-size: cover;
     background-position: center;
@@ -128,8 +129,8 @@ main {
 
 .box-left {
     width: 50%;
+    padding-bottom: 3rem;
     background-color: white;
-    
     border-radius: 0 1rem 1rem 0;
 }
 
@@ -148,11 +149,22 @@ main {
         margin-top: 2rem;
     }
 
+.form-input-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+    .form-input-container label {
+        margin-top: 1rem;
+        margin-bottom: 0.5rem;
+    }
+
 .form-input-container input {
     width: 20rem;
     height: 3rem;
-    margin-top: 2rem;
     border-radius: 1rem;
+    text-align: center;
 }
 
     .form-input-container input:focus {
