Add roles management functionality for super user
Add migration that fix indexes in UserRole table and fix user with roles loading

--- a/ClinicManagement/Views/User/Panel.cshtml
+++ b/ClinicManagement/Views/User/Panel.cshtml
@@ -1,8 +1,13 @@
 ﻿<div class="main-container">
     <div class="table-box">
         <a href="/User/Manage">
-            <div class="tile">
+            <div class="tile red">
                 Manage users
+            </div>
+        </a>
+        <a href="/User/ManageRoles">
+            <div class="tile orange">
+                Manage roles
             </div>
         </a>
     </div>
