--- a/ClinicManagement/wwwroot/css/panel.css
+++ b/ClinicManagement/wwwroot/css/panel.css
@@ -15,6 +15,8 @@
     height: fit-content;
     background-color: white;
     padding: 5rem;
+    display: flex;
+    justify-content: space-around;
 }
 
     .table-box a {
@@ -22,7 +24,6 @@
     }
 
     .table-box .tile {
-        background-color: red;
         width: 15rem;
         height: 15rem;
         display: flex;
@@ -34,7 +35,6 @@
     }
 
         .table-box .tile:hover {
-            background-color: red;
             width: 15rem;
             height: 15rem;
             display: flex;
@@ -46,3 +46,11 @@
             -moz-box-shadow: 0px 2px 12px 0px rgba(66, 68, 90, 1);
             box-shadow: 0px 2px 12px 0px rgba(66, 68, 90, 1);
         }
+
+.red {
+    background-color: red;
+}
+
+.orange {
+    background-color: orange;
+}
