--- a/ClinicManagement/wwwroot/css/site.css
+++ b/ClinicManagement/wwwroot/css/site.css
@@ -184,7 +184,6 @@ main {
 
 @media (max-width: 1400px) {
     .login-box-container {
-        height: 30rem;
         width: 60rem;
         margin-top: 12rem;
     }
@@ -205,7 +204,6 @@ main {
     .form-input-container input {
         width: 20rem;
         height: 3rem;
-        margin-top: 1rem;
     }
 
     .form-input-container button {
@@ -218,7 +216,6 @@ main {
 
 @media (max-width: 900px) {
     .login-box-container {
-        height: 20rem;
         width: 40rem;
         margin-top: 12rem;
     }
@@ -239,7 +236,6 @@ main {
 
     .box-left form {
         margin-top: -1.5rem;
-        height: 8rem;
     }
 
     .form-input-container input {
@@ -257,9 +253,8 @@ main {
 
 @media (max-width: 650px) {
     .login-box-container {
-        height: 30rem;
         width: 20rem;
-        margin-top: 1rem;
+        margin-top: 0;
         border-radius: 2rem;
         display: block;
     }
@@ -275,7 +270,7 @@ main {
 
     .box-left {
         width: 100%;
-        height: 20rem;
+        height: fit-content;
         background-color: white;
         border-radius: 0 0 2rem 2rem;
     }
@@ -302,7 +297,6 @@ main {
     .form-input-container input {
         width: 14rem;
         height: 2rem;
-        margin-top: 1rem;
     }
 
     .form-input-container button {
