--- a/ClinicManagement/wwwroot/css/patients.css
+++ b/ClinicManagement/wwwroot/css/patients.css
@@ -23,8 +23,9 @@
 }
 
     #dataTable_wrapper img {
-        width: 150px;
-        height: 150px;
+        width: 120px;
+        height: 120px;
+        border-radius: 15%;
     }
 
     #dataTable_wrapper table th {
